# leflesko

./: .env-example  .gitignore  Procfile  README.md  docker-compose.yml  palavras.txt  pyproject.toml  requirements.txt
app/: app.py
app/ext/: database.py
app/game/: controllers.py  models.py  palavras.txt  serializers.py
app/user/: controllers.py  models.py  serializers.py
migrations/versions/: 6a916fd43a61_.py  832dd17dbcb8_.py
