[tool.poetry]
name = "leflesko"
version = "0.1.0"
description = ""
authors = ["Thiago Ferreira <thiaago.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "1.7.6"
click = "8.0.3"
Flask = "2.0.2"
Flask-JWT-Extended = "4.3.1"
flask-marshmallow = "0.14.0"
Flask-Migrate = "3.1.0"
Flask-SQLAlchemy = "2.5.1"
greenlet = "1.1.2"
itsdangerous = "2.0.1"
Jinja2 = "3.0.3"
Mako = "1.1.6"
MarkupSafe = "2.0.1"
marshmallow = "3.14.1"
marshmallow-sqlalchemy = "0.27.0"
psycopg-binary = "3.0.8"
psycopg2 = "2.9.3"
PyJWT = "2.3.0"
python-dotenv = "0.19.2"
pytz = "2021.3"
six = "1.16.0"
SQLAlchemy = "1.4.31"
Werkzeug = "2.0.2"
Flask-Cors = "^3.0.10"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
